# Axum-multipart-with-mysql-db

./: .env.example  Cargo.toml  readme.md
src/: controllers.rs  db.rs  main.rs  routes(old).rs  routes.rs  upload.rs
src/handlers/: auth.rs  todo.rs  upload.rs
src/lib/: jwt.rs  upload.rs
src/middlewares/: protect.rs
src/models/: todo.rs  upload.rs  user.rs
src/routes/: auth_route.rs  mod.rs  todo_route.rs  upload_route.rs
