[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["multipart"]}
dotenv = "0.15.0"
full = "0.3.0"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.96"
sqlx = {version = "0.8.2", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
uuid = { version = "1.3.1", features = ["serde", "v4"] }
multipart = "0.18.0"
